tests/invalid/wrong_case.c
int main() {
    RETURN 0;
}
// ERROR: Line 2, Error 2003